Now prompt login when OMERO 500 response